--- a/index.html
+++ b/index.html
@@ -15,10 +15,22 @@
             <div id="menu">
                 <a class="branco" href="index.html">Home</a>
                 <a class="branco" href="">Outros</a>
-                <a class="branco" href="">Outros</a>
-                <a class="branco" href="">Outros</a>
-                <a class="branco" href="">Outros</a>    
+                <a class="branco" href="">Outros</a>  
+                <a class="branco" href="">Outros</a>  
             </div>
+
+            <div id="menuDevice">
+                    <img id="iconMenu" src="img/menu.png" onclick="mostraMenu()">
+                <ul id="itensMenuDevice">
+                    <br>
+                    <li><a class="itemMenuDevice" href="index.html">Home</a></li>
+                    <li><a class="itemMenuDevice" href="index.html">Outros</a></li>
+                    <li><a class="itemMenuDevice" href="index.html">Outros</a></li>
+                    <li><a class="itemMenuDevice" href="index.html">Outros</a></li>
+                </div>
+
+            </div>
+
         </div>
 
         <div id="areaPrincipal"> <!-- Área principal, pag inteira-->
@@ -116,6 +128,8 @@
         <div id="rodape">
             <p>Copyright &copy 2020 - Todos os direitos reservados.</p>
         </div>
+
+        <script src="js/script.js"></script>
 
     </body>
 </html>
