--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
 
         <div id="rodape">
             <p>Copyright &copy 2020 - Todos os direitos reservados.</p>
+            <span>Feito por Pedro Henrique - </span>
+
+            <img class="icon" onclick="insta()" src="img/insta.png">
+            <img class="icon" onclick="facebook()" src="img/facebook.png">
         </div>
 
         <script src="js/script.js"></script>
