--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" type="text/css" href="folha.css">
+        <link rel="stylesheet" type="text/css" href="folhas/folha.css">
         <title>Random Blog</title>
     </head>
     <body>
+
         <div id="cabecalho">
             <div id="titulo">
                 <h1 id="tecblog">Random<span class="branco">Blog</span></h1>
