--- a/postar.html
+++ b/postar.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" type="text/css" href="folhaPostar.css">
-        <link rel="stylesheet" type="text/css" href="folhaHome.css">
+        <link rel="stylesheet" type="text/css" href="folhas/folhaPostar.css">
+        <link rel="stylesheet" type="text/css" href="folhas/folhaHome.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <title>Random Blog</title>
     </head>
