--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>   
 
                     <div id="msgDemoErro">
-                        <p style="color: red;"><strong>Essa demo não funciona em dispositivos móveis!</strong></p><br>
+                        <p style="color: red;"><strong>Esse jogo não funciona em dispositivos móveis!</strong></p><br>
                     </div>
                 
 
