--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div id="cabecalho">
             <div id="titulo">
-                <h1 id="tecblog">Meu<span class="branco">GitHub</span></h1>
+                <h1 id="tecblog">Meu<span class="branco">Git</span>Hub</h1>
             </div>
 
             <div id="menu">
