--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                     <br><br><p>Cookie Clicker foi um projeto que usei somente JavaScript. 
                         É um jogo no qual quanto mais você clica, 
-                        mais cookies ganha. Nele você consegue comprar itens na loja para ganhar 
+                        mais cookies você ganha. Nele você consegue comprar itens na loja para ganhar 
                         CPS (Cookies por segundo), 
                         o que torna o jogo automático, divertido e viciante.</p><br>
                         <a href="https://pedrorreiro.github.io/cookieClicker/" style="color: black; font-size: 1em;" target="_blank">Link para o jogo</a>
