--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <div id="menu">
                 <a class="branco" href="index.html">Home</a>
-                <a class="branco" href="">Contato</a>
+                <a class="branco" href="contato.html">Contato</a>
             </div>
 
             <div id="menuDevice">
@@ -26,7 +26,7 @@
                 <ul id="itensMenuDevice">
                     <br>
                     <li><a class="itemMenuDevice" href="index.html">Home</a></li>
-                    <li><a class="itemMenuDevice" href="index.html">Contato</a></li>
+                    <li><a class="itemMenuDevice" href="contato.html">Contato</a></li>
                 </div>
 
             </div>
