--- a/contato.html
+++ b/contato.html
@@ -47,15 +47,15 @@
                 </div>
 
                 <div style="display: inline-block;" id="iconesRedes">
-                    <a class="text-decoration-none" href="http://www.facebook.com/PedroHenAlves">
+                    <a class="text-decoration-none" href="http://www.facebook.com/PedroHenAlves" target="_blank">
                         <img class="iconPerfil" src="img/facePerfil.png">
                     </a>
 
-                    <a class="text-decoration-none" href="http://www.instagram.com/pedro_riqe">
+                    <a class="text-decoration-none" href="http://www.instagram.com/pedro_riqe" target="_blank">
                         <img class="iconPerfil" src="img/instaPerfil.png">
                     </a>
 
-                    <a class="text-decoration-none" href="https://github.com/pedrorreiro">
+                    <a class="text-decoration-none" href="https://github.com/pedrorreiro" target="_blank">
                         <img class="iconPerfil" src="img/gitPerfil.png">
                     </a>
 
