--- a/contato.html
+++ b/contato.html
@@ -21,22 +21,22 @@
         </div>
 
         <div id="menu">
-            <a class="text-decoration-none branco" href="index.html">Home</a>
-            <a class="text-decoration-none branco" href="contato.html">Contato</a>
+            <a class="branco" href="index.html">Home</a>
+            <a class="branco" href="contato.html">Contato</a>
         </div>
 
         <div id="menuDevice">
-            <img id="iconMenu" src="img/menu.png" onclick="mostraMenu()">
+                <img id="iconMenu" src="img/menu.png" onclick="mostraMenu()">
             <ul id="itensMenuDevice">
                 <br>
                 <li><a class="itemMenuDevice" href="index.html">Home</a></li>
                 <li><a class="itemMenuDevice" href="contato.html">Contato</a></li>
+            </div>
+
         </div>
 
     </div>
-
-    </div>
-
+    
     <div id="areaPrincipal"> <!-- Área principal, pag inteira-->
 
         <div id="content">
