--- a/contato.html
+++ b/contato.html
@@ -29,14 +29,14 @@
                 <img id="iconMenu" src="img/menu.png" onclick="mostraMenu()">
             <ul id="itensMenuDevice">
                 <br>
-                <li><a class="itemMenuDevice" href="index.html">Home</a></li>
-                <li><a class="itemMenuDevice" href="contato.html">Contato</a></li>
+                <li><a class="branco" href="index.html">Home</a></li>
+                <li><a class="branco" href="contato.html">Contato</a></li>
             </div>
 
         </div>
 
     </div>
-    
+
     <div id="areaPrincipal"> <!-- Área principal, pag inteira-->
 
         <div id="content">
