--- a/contato.html
+++ b/contato.html
@@ -10,7 +10,7 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="shortcut icon" href="img/git.ico" />
 
-    <title>Pedro H.</title>
+    <title>Pedro H. - Contato</title>
 </head>
 
 <body>
