--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
             <div id="postagensRecentes"> <!-- Área lateral para postagens recentes -->
                 <div class="titPostagensRecentes">
-                    <span>Postagens Recentes</span> <!-- Título para a área lateral-->
+                    <span>Portifólios</span> <!-- Título para a área lateral-->
     
                 <div class="postRecente">
                     <p class="titPostRecente">Cookie Clicker</p>
