--- a/contato-en.html
+++ b/contato-en.html
@@ -10,7 +10,7 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="shortcut icon" href="img/git.ico" />
 
-    <title>Pedro H. - Contato</title>
+    <title>Pedro H. - Contacts</title>
 </head>
 
 <body>
@@ -21,21 +21,21 @@
         </div>
 
         <div id="menu">
-            <a class="branco" href="index.html">Home</a>
-            <a class="branco" href="contato.html">Contato</a>
+            <a class="branco" href="index-en.html">Home</a>
+            <a class="branco" href="contato-en.html">Contacts</a>
         </div>
 
         <div id="menuDevice">
                 <img id="iconMenu" src="img/menu.png" onclick="mostraMenu()">
             <ul id="itensMenuDevice">
                 <br>
-                <li><a class="branco" href="index.html">Home</a></li>
-                <li><a class="branco" href="contato.html">Contato</a></li>
+                <li><a class="branco" href="index-en.html">Home</a></li>
+                <li><a class="branco" href="contato-en.html">Contacts</a></li>
         </div>
   
         <div id="lang">
-            <a href="contato-en.html">
-                <span style="font-weight: bold; color: white;">EN </span>
+            <a href="contato.html">
+                <span style="font-weight: bold; color: white;">PT </span>
                 <img id="terra" src="img/terra.png">
             </a>
         </div>
@@ -73,10 +73,10 @@
                 <div id="descricao">
 
                     <div id="dados" style="font-weight: bold; font-size: 1.2em;">
-                        <p>Olá, eu sou o Pedro e tô começando aprender agora um pouco de programação web.
-                        Atualmente estudo na Universidade Tecnológica Federal do Paraná, famosa UTF.</p>
-                        <p>Lá na home vocês vão encontrar alguns dos meus projetos que comecei. São simples,
-                            mas deu trabalho.</p>
+                        <p>Hi, I'm Pedro and I'm starting to learn some web programming now.
+                         Currently I study at the Federal Technological University of Paraná, famous UTF.</p>
+                        <p>At home you will find some of my projects that I started. They are simple,
+                            but it took work.</p>
                         
     
                     </div>
@@ -87,8 +87,8 @@
         </div>
 
         <div id="rodape">
-            <p>Copyright &copy 2020 - Todos os direitos reservados.</p>
-            <span>Feito por Pedro Henrique - </span>
+            <p>Copyright &copy 2020 - All rights reserved.</p>
+            <span>Made by Pedro Henrique - </span>
 
             <img class="icon" onclick="insta()" src="img/insta.png">
             <img class="icon" onclick="facebook()" src="img/facebook.png">
