--- a/contato-en.html
+++ b/contato-en.html
@@ -70,8 +70,10 @@
                     </a>
 
                     <div id="qr">
-                        <img class="iconPerfil" id="qrImg" src="img/qrWhats.png">
+                        <br><p style="font-weight: bold;">QR CODE PARA WHATSAPP</p>
+                        <a href="tel:+5562981333190"><img class="iconPerfil" id="qrImg" src="img/qrWhats.png"></a>
                     </div>
+
 
 
 
