--- a/contato.html
+++ b/contato.html
@@ -71,9 +71,8 @@
 
                     <div id="qr">
                         <br><p style="font-weight: bold;">QR CODE PARA WHATSAPP</p>
-                        <img class="iconPerfil" id="qrImg" src="img/qrWhats.png">
+                        <a href="tel:+5562981333190"><img class="iconPerfil" id="qrImg" src="img/qrWhats.png"></a>
                     </div>
-
                 </div>
 
                 <div id="descricao">
