--- a/contato-en.html
+++ b/contato-en.html
@@ -70,12 +70,9 @@
                     </a>
 
                     <div id="qr">
-                        <br><p style="font-weight: bold;">QR CODE PARA WHATSAPP</p>
+                        <br><p style="font-weight: bold;">WHATSAPP QR CODE</p>
                         <a href="tel:+5562981333190"><img class="iconPerfil" id="qrImg" src="img/qrWhats.png"></a>
                     </div>
-
-
-
 
                 </div>
 
