--- a/contato.html
+++ b/contato.html
@@ -78,10 +78,10 @@
                 <div id="descricao">
 
                     <div id="dados" style="font-weight: bold; font-size: 1.2em;">
-                        <p>Olá, eu sou o Pedro e tô começando aprender agora um pouco de programação web.
-                        Atualmente estudo na Universidade Tecnológica Federal do Paraná, famosa UTF.</p>
-                        <p>Lá na home vocês vão encontrar alguns dos meus projetos que comecei. São simples,
-                            mas deu trabalho.</p>
+                        <p>Hi, I'm Pedro and I'm starting to learn some web programming now.
+                         Currently I study at the Federal Technological University of Paraná, famous UTF.</p>
+                        <p>At home you will find some of my projects that I started. They are simple,
+                            but it took work.</p>
                         
     
                     </div>
