--- a/contato-en.html
+++ b/contato-en.html
@@ -67,13 +67,12 @@
 
                     <a class="text-decoration-none" onclick="revelaQr()" target="_blank">
                         <img id="whatsIcon" class="iconPerfil" src="img/whats.png">
-                    </a>
+                    </a><br>
 
                     <div id="qr">
-                        <br><p style="font-weight: bold;">WHATSAPP QR CODE</p>
+                        <br><p style="font-weight: bold;">QR CODE PARA WHATSAPP</p>
                         <a href="tel:+5562981333190"><img class="iconPerfil" id="qrImg" src="img/qrWhats.png"></a>
                     </div>
-
                 </div>
 
                 <div id="descricao">
