--- a/index-en.html
+++ b/index-en.html
@@ -51,7 +51,7 @@
 
                     <strong><p>THIS IS A DEMO VERSION</p></strong><br>
                    
-                    <iframe src="https://pedrorreiro.github.io/cookieClicker/" height="468px" width="100%" scrolling="yes"></iframe>
+                    <iframe src="https://pedrorreiro.github.io/cookieClicker/index-mobile" height="468px" width="100%" scrolling="yes"></iframe>
 
                     <br><br><p>Cookie clicker was a project which I only used JavaScript. 
                         It's a game in which the more you click, 
@@ -59,6 +59,7 @@
                         more CPS (Cookies per second) and 
                         automate the game, making it more fun and addictive.</p><br>
                         <div class="linkToPlay"><a href="https://pedrorreiro.github.io/cookieClicker/" style="color: black; font-size: 1em;" target="_blank">Click to play</a></div>
+                        <div class="linkToPlay"><a href="https://pedrorreiro.github.io/cookieClicker/index-mobile" style="color: black; font-size: 1em;" target="_blank">MOBILE VERSION</a></div>
 
                 </div>
 
@@ -117,8 +118,8 @@
             <p>Copyright &copy 2020 - All rights reserved.</p>
             <span>Made by Pedro Henrique - </span>
 
-            <img class="icon" onclick="insta()" src="img/insta.png">
-            <img class="icon" onclick="facebook()" src="img/facebook.png">
+            <a href="http://www.instagram.com/pedro_riqe" target="_blank"><img class="icon" src="img/insta.png"></a>
+            <a href="http://www.facebook.com/PedroHenAlves" target="_blank"><img class="icon" src="img/facebook.png"></a>
         </div>
 
         <script src="js/script.js"></script>
