--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                     <strong><p>ESSA VERSÃO É APENAS UMA DEMONSTRAÇÃO</p></strong><br>
                    
-                    <iframe src="https://pedrorreiro.github.io/cookieClicker/" height="468px" width="100%" scrolling="yes"></iframe>
+                    <iframe src="https://pedrorreiro.github.io/cookieClicker/index-mobile.html" height="468px" width="100%" scrolling="yes"></iframe>
 
                     <br><br><p>Cookie Clicker foi um projeto que usei somente JavaScript. 
                         É um jogo no qual quanto mais você clica, 
@@ -59,6 +59,7 @@
                         CPS (Cookies por segundo), 
                         o que torna o jogo automático, divertido e viciante.</p><br>
                         <div class="linkToPlay"><a href="https://pedrorreiro.github.io/cookieClicker/" style="color: black; font-size: 1em;" target="_blank">Click to play</a></div>
+                        <div class="linkToPlay"><a href="https://pedrorreiro.github.io/cookieClicker/index-mobile" style="color: black; font-size: 1em;" target="_blank">VERSÃO MOBILE</a></div>
 
                 </div>
 
@@ -117,8 +118,8 @@
             <p>Copyright &copy 2020 - Todos os direitos reservados.</p>
             <span>Feito por Pedro Henrique - </span>
 
-            <img class="icon" onclick="insta()" src="img/insta.png">
-            <img class="icon" onclick="facebook()" src="img/facebook.png">
+            <a href="http://www.instagram.com/pedro_riqe" target="_blank"><img class="icon" src="img/insta.png"></a>
+            <a href="http://www.facebook.com/PedroHenAlves" target="_blank"><img class="icon" src="img/facebook.png"></a>
         </div>
 
         <script src="js/script.js"></script>
