--- a/contato.html
+++ b/contato.html
@@ -95,8 +95,8 @@
             <p>Copyright &copy 2020 - Todos os direitos reservados.</p>
             <span>Feito por Pedro Henrique - </span>
 
-            <img class="icon" onclick="insta()" src="img/insta.png">
-            <img class="icon" onclick="facebook()" src="img/facebook.png">
+            <a href="http://www.instagram.com/pedro_riqe" target="_blank"><img class="icon" src="img/insta.png"></a>
+            <a href="http://www.facebook.com/PedroHenAlves" target="_blank"><img class="icon" src="img/facebook.png"></a>
         </div>
 
         <script src="js/script.js"></script>
