--- a/index-en.html
+++ b/index-en.html
@@ -58,7 +58,7 @@
                         more cookies you get. There you also can buy items in the store to get
                         more CPS (Cookies per second) and 
                         automate the game, making it more fun and addictive.</p><br>
-                        <div class="linkToPlay"><a href="https://pedrorreiro.github.io/cookieClicker/" style="color: black; font-size: 1em;" target="_blank">Click to play</a></div>
+                        <div class="linkToPlay"><a href="https://pedrorreiro.github.io/cookieClicker/" style="color: black; font-size: 1em;" target="_blank">Click to play DESKTOP VERSION</a></div>
                         <div class="linkToPlay"><a href="https://pedrorreiro.github.io/cookieClicker/index-mobile" style="color: black; font-size: 1em;" target="_blank">MOBILE VERSION</a></div>
 
                 </div>
