--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         mais cookies você ganha. Nele você consegue comprar itens na loja para ganhar 
                         CPS (Cookies por segundo), 
                         o que torna o jogo automático, divertido e viciante.</p><br>
-                        <div class="linkToPlay"><a href="https://pedrorreiro.github.io/cookieClicker/" style="color: black; font-size: 1em;" target="_blank">Click to play</a></div>
+                        <div class="linkToPlay"><a href="https://pedrorreiro.github.io/cookieClicker/" style="color: black; font-size: 1em;" target="_blank">Click to play VERSÃO DESKTOP</a></div>
                         <div class="linkToPlay"><a href="https://pedrorreiro.github.io/cookieClicker/index-mobile" style="color: black; font-size: 1em;" target="_blank">VERSÃO MOBILE</a></div>
 
                 </div>
