--- a/contato.html
+++ b/contato.html
@@ -78,10 +78,10 @@
                 <div id="descricao">
 
                     <div id="dados" style="font-weight: bold; font-size: 1.2em;">
-                        <p>Hi, I'm Pedro and I'm starting to learn some web programming now.
-                         Currently I study at the Federal Technological University of Paraná, famous UTF.</p>
-                        <p>At home you will find some of my projects that I started. They are simple,
-                            but it took work.</p>
+                        <p>Olá, eu sou o Pedro e tô começando aprender programação web.
+                         Atualmente estudo na Universidade Tecnológica Federal do Paraná, famosa UTF.</p>
+                        <p>Na home você encontrará alguns dos meus projetos que iniciei. Eles são simples,
+                            mas deram trabalho.</p>
                         
     
                     </div>
