--- a/index-en.html
+++ b/index-en.html
@@ -53,7 +53,7 @@
 
                 <p class="dataPost">Created in: October 2020</p><br>
 
-                <div id="frameFruit">
+                <div id="frameBlog">
 
                     <iframe id="blog" src="https://peedroblog.herokuapp.com/" height="600px" width="69%"
                         scrolling="yes"></iframe>
