--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                     <p><strong>ESSA VERSÃO É APENAS UMA DEMONSTRAÇÃO</strong></p><br>
                 
-                    <div id="frameFruit">
+                    <div id="frameBlog">
                         
                         <iframe id="blog" src="https://peedroblog.herokuapp.com/" height="600px" width= "69%" scrolling="yes" ></iframe>
                         <br><br>
