--- a/index-en.html
+++ b/index-en.html
@@ -55,7 +55,7 @@
 
                 <div id="frameBlog">
 
-                    <iframe id="blog" src="https://peedroblog.herokuapp.com/" height="468px" width="100%"
+                    <iframe id="blog" src="https://pedroblogg.herokuapp.com/" height="468px" width="100%"
                         scrolling="yes"></iframe>
                     <br><br>
                 </div>
@@ -65,7 +65,7 @@
                 <p> It aims to implement login and registration tools. A system of posts was also made, 
                     in which the administrator can post, and only registered users can have access to them.
                 </p>
-                <div class="linkToPlay"><a href="https://peedroblog.herokuapp.com/"
+                <div class="linkToPlay"><a href="https://pedroblogg.herokuapp.com/"
                         style="color: black; font-size: 1em;" target="_blank">Click to acess</a></div>
 
             </div>
