--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 
                     <div id="frameBlog">
                         
-                        <iframe id="blog" src="https://peedroblog.herokuapp.com/" height="468px" width="100%" scrolling="yes" ></iframe>
+                        <iframe id="blog" src="https://pedroblogg.herokuapp.com/" height="468px" width="100%" scrolling="yes" ></iframe>
                         <br><br>
                     </div> 
 
@@ -63,7 +63,7 @@
                     <p> Ela tem como objetivo implementar ferramentas de login e cadastro. Também foi feito um sistema de posts, no
                         qual o administador pode postar, e somente usuários cadastrados podem ter acesso a eles.
                     </p>
-                    <div class="linkToPlay"><a href="https://peedroblog.herokuapp.com/" style="color: black; font-size: 1em;" target="_blank">Click to acess</a></div>
+                    <div class="linkToPlay"><a href="https://pedroblogg.herokuapp.com/" style="color: black; font-size: 1em;" target="_blank">Click to acess</a></div>
 
                 </div>
 
